@@ -2,7 +2,8 @@
 
 dependencies {
     api(project(":key.core"))
-    testImplementation(project(":key.core").sourceSets.test.output)
+
+    testImplementation(testFixtures(project(":key.core")))
 }
 
 
@@ -22,4 +23,27 @@ tasks.register('generateRAPUnitTests', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     mainClass.set("de.uka.ilkd.key.informationflow.GenerateUnitTests")
     args(rapDir)
+}
+
+
+tasks.register("testRAP", Test) {
+    description = "Testng the generated RAP unit tests"
+    group = "verification"
+    dependsOn('generateRAPUnitTests', 'testClasses')
+
+    forkEvery = 1
+    maxParallelForks = 2
+    useJUnitPlatform()
+    it.filter {
+        it.includeTestsMatching "de.uka.ilkd.key.proof.runallproofs.gen.*"
+    }
+    // set heap size for the test JVM(s)
+    minHeapSize = "1g"
+    maxHeapSize = "3g"
+
+    // set JVM arguments for the test JVM(s)
+    //jvmArgs('-XX:MaxPermSize=1g')
+    failFast=false
+    testLogging.showStandardStreams = false
+    testLogging.displayGranularity = 1
 }
